--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:setup": "tsx scripts/simple-setup.ts",
+    "db:setup:dry-run": "tsx scripts/simple-setup.ts --dry-run",
+    "db:verify": "tsx scripts/simple-setup.ts --verify",
+    "db:reset": "supabase db reset",
+    "db:push": "supabase db push",
+    "setup": "yarn db:setup"
   },
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
@@ -29,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
