--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "setup": "yarn db:setup"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +25,7 @@
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
+    "openai": "^5.22.0",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
